--- a/Assignment5/Makefile
+++ b/Assignment5/Makefile
@@ -1,8 +1,8 @@
+	
 PROJECT := transformer
 IDIR := .
 CXX := g++
 CXXFLAGS := -I$(IDIR) -Werror -Wpedantic -Wall
-LDFLAGS :=
 OBJECT_FILES := Transformers.o Autobots.o Decepticons.o main.o
 
 DEPS := Transformers.h Autobots.h Decepticons.h
@@ -11,15 +11,15 @@ all: $(PROJECT)
 default: all
 
 %.o: %.cpp $(DEPS)
-    $(CXX) -c -o $@ $< $(CXXFLAGS)
+	$(CXX) -c -o $@ $< $(CXXFLAGS)
 
 clean:
-    rm -f $(PROJECT) *.o
+	rm -f $(PROJECT) *.o
 
 format:
-    find . $ -name '*.cpp' -o -name '*.h' $ -exec clang-format -i {} \;
+	find . $ -name '*.cpp' -o -name '*.h' $ -exec clang-format -i {} \;
 
 $(PROJECT): $(OBJECT_FILES)
-    $(CXX) -o $@ $^ $(LDFLAGS)
+	$(CXX) -o $@ $^
 
 .PHONY: clean format all default
